# utils

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
lib/include/: defTypes.h  standard-types.h  utils.h
lib/src/: utils.c
tests/src/: AllTests.cpp  MiscellaneousTest.cpp
